After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 647086 - Mismatched style_context_[save/restore] calls
Mismatched style_context_[save/restore] calls
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-04-07 19:24 UTC by Cosimo Cecchi
Modified: 2011-04-09 00:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
calendar: make sure to call gtk_style_context_restore() (828 bytes, patch)
2011-04-07 19:24 UTC, Cosimo Cecchi
none Details | Review
separator: call gtk_style_context_restore() after drawing (702 bytes, patch)
2011-04-07 19:24 UTC, Cosimo Cecchi
none Details | Review
themingengine: don't set a line width before saving the cairo context (1.10 KB, patch)
2011-04-07 19:24 UTC, Cosimo Cecchi
none Details | Review

Description Cosimo Cecchi 2011-04-07 19:24:44 UTC
These are a few incorrect behaviors I found while looking for the cause of https://bugzilla.gnome.org/show_bug.cgi?id=647013 (which I did not track down yet, but seems a lot like a mismatched cairo_save/restore call).
Comment 1 Cosimo Cecchi 2011-04-07 19:24:46 UTC
Created attachment 185460 [details] [review]
calendar: make sure to call gtk_style_context_restore()
Comment 2 Cosimo Cecchi 2011-04-07 19:24:49 UTC
Created attachment 185461 [details] [review]
separator: call gtk_style_context_restore() after drawing
Comment 3 Cosimo Cecchi 2011-04-07 19:24:52 UTC
Created attachment 185462 [details] [review]
themingengine: don't set a line width before saving the cairo context
Comment 4 Matthias Clasen 2011-04-09 00:34:35 UTC
Pushed to both master and gtk-3-0, thanks