calendar: make sure to call gtk_style_context_restore()

https://bugzilla.gnome.org/show_bug.cgi?id=647086